compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CHARC

Grammar

Rule 0     S' -> Program
Rule 1     Program -> ProgramHead DeclarePart ProgramBody DOT
Rule 2     ProgramHead -> PROGRAM ProgramName
Rule 3     ProgramName -> ID
Rule 4     DeclarePart -> TypeDec VarDec ProcDec
Rule 5     TypeDec -> <empty>
Rule 6     TypeDec -> TypeDeclaration
Rule 7     TypeDeclaration -> TYPE TypeDecList
Rule 8     TypeDecList -> TypeId EQ TypeName SEMI TypeDecMore
Rule 9     TypeDecMore -> <empty>
Rule 10    TypeDecMore -> TypeDecList
Rule 11    TypeId -> ID
Rule 12    TypeName -> BaseType
Rule 13    TypeName -> StructureType
Rule 14    TypeName -> ID
Rule 15    BaseType -> INTEGER
Rule 16    BaseType -> CHAR
Rule 17    StructureType -> ArrayType
Rule 18    StructureType -> RecType
Rule 19    ArrayType -> ARRAY LMIDPAREN INTC UNDERANGE INTC RMIDPAREN OF BaseType
Rule 20    RecType -> RECORD FieldDecList END
Rule 21    FieldDecList -> BaseType IdList SEMI FieldDecMore
Rule 22    FieldDecList -> ArrayType IdList SEMI FieldDecMore
Rule 23    FieldDecMore -> <empty>
Rule 24    FieldDecMore -> FieldDecList
Rule 25    IdList -> ID IdMore
Rule 26    IdMore -> <empty>
Rule 27    IdMore -> COMMA IdList
Rule 28    VarDec -> <empty>
Rule 29    VarDec -> VarDeclaration
Rule 30    VarDeclaration -> VAR VarDecList
Rule 31    VarDecList -> TypeName VarIdList SEMI VarDecMore
Rule 32    VarDecMore -> <empty>
Rule 33    VarDecMore -> VarDecList
Rule 34    VarIdList -> ID VarIdMore
Rule 35    VarIdMore -> <empty>
Rule 36    VarIdMore -> COMMA VarIdList
Rule 37    ProcDec -> <empty>
Rule 38    ProcDec -> ProcDeclaration
Rule 39    ProcDeclaration -> PROCEDURE ProcName LPAREN ParamList RPAREN SEMI ProcDecPart ProcBody ProcDecMore
Rule 40    ProcDecMore -> <empty>
Rule 41    ProcDecMore -> ProcDec
Rule 42    ProcName -> ID
Rule 43    ParamList -> <empty>
Rule 44    ParamList -> ParamDecList
Rule 45    ParamDecList -> Param ParamMore
Rule 46    ParamMore -> <empty>
Rule 47    ParamMore -> SEMI ParamDecList
Rule 48    Param -> TypeName FormList
Rule 49    Param -> VAR TypeName FormList
Rule 50    FormList -> ID FidMore
Rule 51    FidMore -> <empty>
Rule 52    FidMore -> COMMA FormList
Rule 53    ProcDecPart -> DeclarePart
Rule 54    ProcBody -> ProgramBody
Rule 55    ProgramBody -> BEGIN StmList END
Rule 56    StmList -> Stm StmMore
Rule 57    StmMore -> <empty>
Rule 58    StmMore -> SEMI StmList
Rule 59    Stm -> ConditionalStm
Rule 60    Stm -> LoopStm
Rule 61    Stm -> InputStm
Rule 62    Stm -> OutputStm
Rule 63    Stm -> ReturnStm
Rule 64    Stm -> ID AssCall
Rule 65    AssCall -> AssignmentRest
Rule 66    AssCall -> CallStmRest
Rule 67    AssignmentRest -> VariMore ASSIGN Exp
Rule 68    ConditionalStm -> IF RelExp THEN StmList ELSE StmList FI
Rule 69    LoopStm -> WHILE RelExp DO StmList ENDWH
Rule 70    InputStm -> READ LPAREN Invar RPAREN
Rule 71    Invar -> ID
Rule 72    OutputStm -> WRITE LPAREN Exp RPAREN
Rule 73    ReturnStm -> RETURN LPAREN Exp RPAREN
Rule 74    CallStmRest -> LPAREN ActParamList RPAREN
Rule 75    ActParamList -> <empty>
Rule 76    ActParamList -> Exp ActParamMore
Rule 77    ActParamMore -> <empty>
Rule 78    ActParamMore -> COMMA ActParamList
Rule 79    RelExp -> Exp OtherRelE
Rule 80    OtherRelE -> CmpOp Exp
Rule 81    Exp -> Term OtherTerm
Rule 82    OtherTerm -> <empty>
Rule 83    OtherTerm -> AddOp Exp
Rule 84    Term -> Factor OtherFactor
Rule 85    OtherFactor -> <empty>
Rule 86    OtherFactor -> MultOp Term
Rule 87    Factor -> LPAREN Exp RPAREN
Rule 88    Factor -> INTC
Rule 89    Factor -> Variable
Rule 90    Variable -> ID VariMore
Rule 91    VariMore -> <empty>
Rule 92    VariMore -> LMIDPAREN Exp RMIDPAREN
Rule 93    VariMore -> DOT FieldVar
Rule 94    FieldVar -> ID FieldVarMore
Rule 95    FieldVarMore -> <empty>
Rule 96    FieldVarMore -> LMIDPAREN Exp RMIDPAREN
Rule 97    CmpOp -> LT
Rule 98    CmpOp -> EQ
Rule 99    AddOp -> PLUS
Rule 100   AddOp -> MINUS
Rule 101   MultOp -> TIMES
Rule 102   MultOp -> OVER

Terminals, with rules where they appear

ARRAY                : 19
ASSIGN               : 67
BEGIN                : 55
CHAR                 : 16
CHARC                : 
COMMA                : 27 36 52 78
DO                   : 69
DOT                  : 1 93
ELSE                 : 68
END                  : 20 55
ENDWH                : 69
EQ                   : 8 98
FI                   : 68
ID                   : 3 11 14 25 34 42 50 64 71 90 94
IF                   : 68
INTC                 : 19 19 88
INTEGER              : 15
LMIDPAREN            : 19 92 96
LPAREN               : 39 70 72 73 74 87
LT                   : 97
MINUS                : 100
OF                   : 19
OVER                 : 102
PLUS                 : 99
PROCEDURE            : 39
PROGRAM              : 2
READ                 : 70
RECORD               : 20
RETURN               : 73
RMIDPAREN            : 19 92 96
RPAREN               : 39 70 72 73 74 87
SEMI                 : 8 21 22 31 39 47 58
THEN                 : 68
TIMES                : 101
TYPE                 : 7
UNDERANGE            : 19
VAR                  : 30 49
WHILE                : 69
WRITE                : 72
error                : 

Nonterminals, with rules where they appear

ActParamList         : 74 78
ActParamMore         : 76
AddOp                : 83
ArrayType            : 17 22
AssCall              : 64
AssignmentRest       : 65
BaseType             : 12 19 21
CallStmRest          : 66
CmpOp                : 80
ConditionalStm       : 59
DeclarePart          : 1 53
Exp                  : 67 72 73 76 79 80 83 87 92 96
Factor               : 84
FidMore              : 50
FieldDecList         : 20 24
FieldDecMore         : 21 22
FieldVar             : 93
FieldVarMore         : 94
FormList             : 48 49 52
IdList               : 21 22 27
IdMore               : 25
InputStm             : 61
Invar                : 70
LoopStm              : 60
MultOp               : 86
OtherFactor          : 84
OtherRelE            : 79
OtherTerm            : 81
OutputStm            : 62
Param                : 45
ParamDecList         : 44 47
ParamList            : 39
ParamMore            : 45
ProcBody             : 39
ProcDec              : 4 41
ProcDecMore          : 39
ProcDecPart          : 39
ProcDeclaration      : 38
ProcName             : 39
Program              : 0
ProgramBody          : 1 54
ProgramHead          : 1
ProgramName          : 2
RecType              : 18
RelExp               : 68 69
ReturnStm            : 63
Stm                  : 56
StmList              : 55 58 68 68 69
StmMore              : 56
StructureType        : 13
Term                 : 81 86
TypeDec              : 4
TypeDecList          : 7 10
TypeDecMore          : 8
TypeDeclaration      : 6
TypeId               : 8
TypeName             : 8 31 48 49
VarDec               : 4
VarDecList           : 30 33
VarDecMore           : 31
VarDeclaration       : 29
VarIdList            : 31 36
VarIdMore            : 34
VariMore             : 67 90
Variable             : 89

Parsing method: LALR

state 0

    (0) S' -> . Program
    (1) Program -> . ProgramHead DeclarePart ProgramBody DOT
    (2) ProgramHead -> . PROGRAM ProgramName

    PROGRAM         shift and go to state 3

    Program                        shift and go to state 1
    ProgramHead                    shift and go to state 2

state 1

    (0) S' -> Program .



state 2

    (1) Program -> ProgramHead . DeclarePart ProgramBody DOT
    (4) DeclarePart -> . TypeDec VarDec ProcDec
    (5) TypeDec -> .
    (6) TypeDec -> . TypeDeclaration
    (7) TypeDeclaration -> . TYPE TypeDecList

    VAR             reduce using rule 5 (TypeDec -> .)
    PROCEDURE       reduce using rule 5 (TypeDec -> .)
    BEGIN           reduce using rule 5 (TypeDec -> .)
    TYPE            shift and go to state 7

    DeclarePart                    shift and go to state 4
    TypeDec                        shift and go to state 5
    TypeDeclaration                shift and go to state 6

state 3

    (2) ProgramHead -> PROGRAM . ProgramName
    (3) ProgramName -> . ID

    ID              shift and go to state 9

    ProgramName                    shift and go to state 8

state 4

    (1) Program -> ProgramHead DeclarePart . ProgramBody DOT
    (55) ProgramBody -> . BEGIN StmList END

    BEGIN           shift and go to state 11

    ProgramBody                    shift and go to state 10

state 5

    (4) DeclarePart -> TypeDec . VarDec ProcDec
    (28) VarDec -> .
    (29) VarDec -> . VarDeclaration
    (30) VarDeclaration -> . VAR VarDecList

    PROCEDURE       reduce using rule 28 (VarDec -> .)
    BEGIN           reduce using rule 28 (VarDec -> .)
    VAR             shift and go to state 14

    VarDec                         shift and go to state 12
    VarDeclaration                 shift and go to state 13

state 6

    (6) TypeDec -> TypeDeclaration .

    VAR             reduce using rule 6 (TypeDec -> TypeDeclaration .)
    PROCEDURE       reduce using rule 6 (TypeDec -> TypeDeclaration .)
    BEGIN           reduce using rule 6 (TypeDec -> TypeDeclaration .)


state 7

    (7) TypeDeclaration -> TYPE . TypeDecList
    (8) TypeDecList -> . TypeId EQ TypeName SEMI TypeDecMore
    (11) TypeId -> . ID

    ID              shift and go to state 17

    TypeDecList                    shift and go to state 15
    TypeId                         shift and go to state 16

state 8

    (2) ProgramHead -> PROGRAM ProgramName .

    TYPE            reduce using rule 2 (ProgramHead -> PROGRAM ProgramName .)
    BEGIN           reduce using rule 2 (ProgramHead -> PROGRAM ProgramName .)
    VAR             reduce using rule 2 (ProgramHead -> PROGRAM ProgramName .)
    PROCEDURE       reduce using rule 2 (ProgramHead -> PROGRAM ProgramName .)


state 9

    (3) ProgramName -> ID .

    TYPE            reduce using rule 3 (ProgramName -> ID .)
    BEGIN           reduce using rule 3 (ProgramName -> ID .)
    VAR             reduce using rule 3 (ProgramName -> ID .)
    PROCEDURE       reduce using rule 3 (ProgramName -> ID .)


state 10

    (1) Program -> ProgramHead DeclarePart ProgramBody . DOT

    DOT             shift and go to state 18


state 11

    (55) ProgramBody -> BEGIN . StmList END
    (56) StmList -> . Stm StmMore
    (59) Stm -> . ConditionalStm
    (60) Stm -> . LoopStm
    (61) Stm -> . InputStm
    (62) Stm -> . OutputStm
    (63) Stm -> . ReturnStm
    (64) Stm -> . ID AssCall
    (68) ConditionalStm -> . IF RelExp THEN StmList ELSE StmList FI
    (69) LoopStm -> . WHILE RelExp DO StmList ENDWH
    (70) InputStm -> . READ LPAREN Invar RPAREN
    (72) OutputStm -> . WRITE LPAREN Exp RPAREN
    (73) ReturnStm -> . RETURN LPAREN Exp RPAREN

    ID              shift and go to state 26
    IF              shift and go to state 27
    WHILE           shift and go to state 28
    READ            shift and go to state 29
    WRITE           shift and go to state 30
    RETURN          shift and go to state 31

    StmList                        shift and go to state 19
    Stm                            shift and go to state 20
    ConditionalStm                 shift and go to state 21
    LoopStm                        shift and go to state 22
    InputStm                       shift and go to state 23
    OutputStm                      shift and go to state 24
    ReturnStm                      shift and go to state 25

state 12

    (4) DeclarePart -> TypeDec VarDec . ProcDec
    (37) ProcDec -> .
    (38) ProcDec -> . ProcDeclaration
    (39) ProcDeclaration -> . PROCEDURE ProcName LPAREN ParamList RPAREN SEMI ProcDecPart ProcBody ProcDecMore

    BEGIN           reduce using rule 37 (ProcDec -> .)
    PROCEDURE       shift and go to state 34

    ProcDec                        shift and go to state 32
    ProcDeclaration                shift and go to state 33

state 13

    (29) VarDec -> VarDeclaration .

    PROCEDURE       reduce using rule 29 (VarDec -> VarDeclaration .)
    BEGIN           reduce using rule 29 (VarDec -> VarDeclaration .)


state 14

    (30) VarDeclaration -> VAR . VarDecList
    (31) VarDecList -> . TypeName VarIdList SEMI VarDecMore
    (12) TypeName -> . BaseType
    (13) TypeName -> . StructureType
    (14) TypeName -> . ID
    (15) BaseType -> . INTEGER
    (16) BaseType -> . CHAR
    (17) StructureType -> . ArrayType
    (18) StructureType -> . RecType
    (19) ArrayType -> . ARRAY LMIDPAREN INTC UNDERANGE INTC RMIDPAREN OF BaseType
    (20) RecType -> . RECORD FieldDecList END

    ID              shift and go to state 39
    INTEGER         shift and go to state 40
    CHAR            shift and go to state 41
    ARRAY           shift and go to state 44
    RECORD          shift and go to state 45

    VarDecList                     shift and go to state 35
    TypeName                       shift and go to state 36
    BaseType                       shift and go to state 37
    StructureType                  shift and go to state 38
    ArrayType                      shift and go to state 42
    RecType                        shift and go to state 43

state 15

    (7) TypeDeclaration -> TYPE TypeDecList .

    VAR             reduce using rule 7 (TypeDeclaration -> TYPE TypeDecList .)
    PROCEDURE       reduce using rule 7 (TypeDeclaration -> TYPE TypeDecList .)
    BEGIN           reduce using rule 7 (TypeDeclaration -> TYPE TypeDecList .)


state 16

    (8) TypeDecList -> TypeId . EQ TypeName SEMI TypeDecMore

    EQ              shift and go to state 46


state 17

    (11) TypeId -> ID .

    EQ              reduce using rule 11 (TypeId -> ID .)


state 18

    (1) Program -> ProgramHead DeclarePart ProgramBody DOT .

    $end            reduce using rule 1 (Program -> ProgramHead DeclarePart ProgramBody DOT .)


state 19

    (55) ProgramBody -> BEGIN StmList . END

    END             shift and go to state 47


state 20

    (56) StmList -> Stm . StmMore
    (57) StmMore -> .
    (58) StmMore -> . SEMI StmList

    END             reduce using rule 57 (StmMore -> .)
    ELSE            reduce using rule 57 (StmMore -> .)
    ENDWH           reduce using rule 57 (StmMore -> .)
    FI              reduce using rule 57 (StmMore -> .)
    SEMI            shift and go to state 49

    StmMore                        shift and go to state 48

state 21

    (59) Stm -> ConditionalStm .

    SEMI            reduce using rule 59 (Stm -> ConditionalStm .)
    END             reduce using rule 59 (Stm -> ConditionalStm .)
    ELSE            reduce using rule 59 (Stm -> ConditionalStm .)
    ENDWH           reduce using rule 59 (Stm -> ConditionalStm .)
    FI              reduce using rule 59 (Stm -> ConditionalStm .)


state 22

    (60) Stm -> LoopStm .

    SEMI            reduce using rule 60 (Stm -> LoopStm .)
    END             reduce using rule 60 (Stm -> LoopStm .)
    ELSE            reduce using rule 60 (Stm -> LoopStm .)
    ENDWH           reduce using rule 60 (Stm -> LoopStm .)
    FI              reduce using rule 60 (Stm -> LoopStm .)


state 23

    (61) Stm -> InputStm .

    SEMI            reduce using rule 61 (Stm -> InputStm .)
    END             reduce using rule 61 (Stm -> InputStm .)
    ELSE            reduce using rule 61 (Stm -> InputStm .)
    ENDWH           reduce using rule 61 (Stm -> InputStm .)
    FI              reduce using rule 61 (Stm -> InputStm .)


state 24

    (62) Stm -> OutputStm .
